fix: style for collapsed warning hint

--- a/src/styles/iScroll.scss
+++ b/src/styles/iScroll.scss
@@ -122,7 +122,7 @@
     height: 30px;
 
     cursor: pointer;
-    right: 20px;
+    right: 30px;
 
     &:before {
       content: '\21BA';
